<resources>
    <string name="app_name">Robotic Simulator Controller</string>

    <string name="turnOn">Turn on Bluetooth</string>
    <string name="bluetoothNotAvailable">No bluetooth available. We are sorry, but this application is not supported on your device</string>
    <string name="bluetoothTurnedOff">In order to use this controller application, you have to turn on Bluetooth</string>
    <string name="grab">grab</string>
    <string name="release">release</string>
    <string name="tipUp">tip up</string>
    <string name="tipDown">tip down</string>
    <string name="bluetoothProblem">Something went wrong. Please turn on bluetooth in order to use this application</string>
    <string name="name_unavailable">Name unavailable</string>
    <string name="paired_devices">Paired Devices</string>
    <string name="other_devices">Other Devices</string>
    <string name="turn_on_location_permission">Turn on location Permission</string>
    <string name="device_connection_issue">Couldn\'t connect to the device</string>
    <string name="redScore">Red: %1$i</string>
    <string name="blueScore">Blue: %1$i</string>

    <string name="greenScore">Green: %1$i</string>
    <string name="missed">Missed: %1$i</string>

</resources>
